--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,7 @@ dmypy.json
 ### Vagrant ###
 # General
 .vagrant/
+.vagrant
 
 # Log files (if you are creating logs in debug mode, uncomment this)
 # *.log
