--- a/provisioning/ipaclient/playbook.yml
+++ b/provisioning/ipaclient/playbook.yml
@@ -21,3 +21,18 @@
   roles:
   - role: ipaclient
     state: present
+  tasks:
+  # https://access.redhat.com/solutions/3242461
+  - name: KDC - fixing dns_lookup_kdc
+    lineinfile:
+      path: /etc/krb5.conf
+      regexp: '\sdns_lookup_kdc'
+      line: '  dns_lookup_kdc = true'
+    when: ipaclient_krb5_fix | bool
+
+  - name: KDC - fixing dns_lookup_realm
+    lineinfile:
+      path: /etc/krb5.conf
+      regexp: '\sdns_lookup_realm'
+      line: '  dns_lookup_realm = true'
+    when: ipaclient_krb5_fix | bool
