allow_all rule management

--- a/default.config.yml
+++ b/default.config.yml
@@ -31,5 +31,6 @@ ipaserver_auto_forwarders: yes
 ipaserver_setup_adtrust: yes
 ipaserver_ipatrust_range_type: ipa-ad-trust
 #ipaserver_ipatrust_range_type: ipa-ad-trust-posix
+ipaserver_hbac_disable_allow_all: true
 
 timezone: GMT Standard Time
