--- a/default.config.yml
+++ b/default.config.yml
@@ -31,6 +31,6 @@ ipaserver_auto_forwarders: yes
 ipaserver_setup_adtrust: yes
 ipaserver_ipatrust_range_type: ipa-ad-trust
 #ipaserver_ipatrust_range_type: ipa-ad-trust-posix
-ipaserver_hbac_disable_allow_all: true
+ipaserver_hbac_disable_allow_all: false
 
 timezone: GMT Standard Time
