--- a/provisioning/ipaserver/playbook.yml
+++ b/provisioning/ipaserver/playbook.yml
@@ -59,3 +59,13 @@
       name: allow_all
       state: "{{ ipaserver_hbac_allow_all }}"
       ipaadmin_password: "{{ ipaadmin_password }}"
+  
+  - name: Create HBAC rule for Domain Admins group
+    ipahbacrule:
+      ipaadmin_password: '{{ ipaadmin_password }}'
+      name: ad_domain_admins_allow_all
+      description: Allow Domain Admins to access any host from any host
+      group: ad_domain_admins
+      hostcat: all
+      servicecat: all
+      state: present
