--- a/provisioning/ipareplica/vars/main.yml
+++ b/provisioning/ipareplica/vars/main.yml
@@ -2,3 +2,5 @@
 ipaddress: '{{ ipa_replica_ip_address }}'
 hostname: '{{ ipa_replica_name }}'
 domain: '{{ ipa_domain }}'
+fqdn: '{{ ipa_server_fqdn }}'
+ipaserver_no_dnssec_validation: True
