--- a/provisioning/ipaclient/vars/main.yml
+++ b/provisioning/ipaclient/vars/main.yml
@@ -1,4 +1,4 @@
 ---
-ipaddress: '{{ ipa_client_ip_address }}'
-hostname: '{{ ipa_client_name }}'
+#ipaddress: '{{ ipa_client_ip_address }}'
+#hostname: '{{ ipa_client_name }}'
 domain: '{{ ipa_domain }}'
