--- a/provisioning/ipaserver/playbook.yml
+++ b/provisioning/ipaserver/playbook.yml
@@ -47,7 +47,7 @@
       ipaadmin_password: '{{ ipaadmin_password }}'
       name: ad_domain_admins_external
       external: yes
-      externalmember: "{{ ad_netbios }}\\Domain Admins"
+      externalmember: "Domain Admins@{{ ad_domain }}"
 
   - name: Create internal group and add the external group as a member
     ipagroup:
