--- a/default.config.yml
+++ b/default.config.yml
@@ -1,4 +1,7 @@
 ---
+numberof_ipa_replicas: 5
+numberof_ipa_clients: 1
+
 ipa_realm: IDM.AD.TEST
 ipa_domain: idm.ad.test
 ipa_netbios: IDM
@@ -6,8 +9,8 @@ ipa_server_name: ipa
 ipa_server_fqdn: '{{ ipa_server_name }}.{{ ipa_domain }}'
 ipa_server_ip_address: 192.168.68.11
 ipa_server_gateway: 192.168.68.254
-ipa_replica_name: rep
-ipa_replica_ip_address: 192.168.68.12
+#ipa_replica_name: rep
+#ipa_replica_ip_address: 192.168.68.12
 ipa_client_krb5_fix: true
 ipa_client_set_default_domain: false
 
