--- a/provisioning/ad/Vagrantfile
+++ b/provisioning/ad/Vagrantfile
@@ -13,5 +13,16 @@ Vagrant.configure("2") do |config|
         ansible.inventory_path = "./inventory"
     end
   end
+  config.vm.define "dc2" do |config|
+    config.vm.box = "StefanScherer/windows_2019"
+    config.vm.hostname = "dc2"
+    config.vm.synced_folder '.', '/vagrant', disabled: true
+    config.vm.network :private_network, ip: "192.168.68.9", gateway: settings['ad_server_gateway']
+
+    config.vm.provision "ansible" do |ansible|
+        ansible.playbook = "./playbook2.yml"
+        ansible.inventory_path = "./inventory"
+    end
+  end
 end
 
