Use the YAML callback plugin.

--- a/provisioning/ipaserver/ansible.cfg
+++ b/provisioning/ipaserver/ansible.cfg
@@ -1,3 +1,7 @@
 [defaults]
 roles_path = ./roles
 nocows = 0
+# Use the YAML callback plugin.
+# stdout_callback = community.general.yaml
+# Use the stdout_callback when running ad-hoc commands.
+# bin_ansible_callbacks = True
